# backend/handler/routes.go
@@ -18,16 +18,19 @@ func (h *Handler) RegisterRoutes(e *echo.Echo) {
 	authGroup.POST("/refresh_token", h.RefreshToken)
 	authGroup.GET("/user", h.User)
 
-	serviceGroup := apiGroup.Group("/services")
-	serviceGroup.GET("", h.Services)
-	serviceGroup.POST("", h.CreateService)
-	serviceGroup.PUT("/:service_version_id", h.UpdateService)
-	serviceGroup.PUT("/:service_version_id/publish", h.PublishServiceVersion)
-	serviceGroup.GET("/:service_version_id", h.Service)
-	serviceGroup.GET("/:service_version_id/versions", h.ServiceVersions)
-	serviceGroup.GET("/name-taken/:name", h.IsServiceNameTaken)
+	servicesGroup := apiGroup.Group("/services")
+	servicesGroup.GET("", h.Services)
+	servicesGroup.POST("", h.CreateService)
+	servicesGroup.GET("/name-taken/:name", h.IsServiceNameTaken)
 
-	featureGroup := serviceGroup.Group("/:service_version_id/features")
+	serviceGroup := servicesGroup.Group("/:service_version_id")
+	serviceGroup.PUT("", h.UpdateService)
+	serviceGroup.PUT("/publish", h.PublishServiceVersion)
+	serviceGroup.GET("", h.Service)
+	serviceGroup.GET("/versions", h.ServiceVersions)
+	serviceGroup.POST("/versions", h.CreateServiceVersion)
+
+	featureGroup := serviceGroup.Group("/features")
 	featureGroup.GET("", h.Features)
 	featureGroup.GET("/linkable", h.LinkableFeatures)
 	featureGroup.POST("", h.CreateFeature)
